name:           styx
version:        1.1
category:       Development
synopsis:       A generator of nix files
description:
  Soon to appear.
license:        GPL
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.20
tested-with:    GHC==8.0.1
build-type:     Simple

executable styx
  default-language: Haskell2010
  build-depends: base<=666
  build-depends: process>=1.1
  build-depends: yaml
  build-depends: filepath>=1.3
  build-depends: directory>=1.1
  build-depends: mtl
  build-depends: text
  build-depends: containers
  build-depends: aeson
  build-depends: optparse-applicative

  main-is: Main.hs


 
